# wii-arena

./: .clang-format  .dockerignore  .gitmodules  CMakeLists.txt  README.md  main.py  pyproject.toml
.github/workflows/: publish-dolphin-image.yml  publish-dolphin.yml
configurations/dolphin/: controller.py  xorg.conf.template
configurations/dolphin/scripts/: control.py
configurations/dolphin/settings/Config/: Dolphin.ini  GFX.ini
configurations/dolphin/settings/GameSettings/: RMCP01.ini
configurations/dolphin/settings/dolphin_settings/Config/: Dolphin.ini  GFX.ini
configurations/dolphin/settings/dolphin_settings/GameSettings/: RMCP01.ini
containers/dolphin/: Dockerfile  entrypoint.sh  start-dolphin-gpu-x11.sh
