[project]
name = "wii-arena"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pillow>=12.2.0"]

[dependency-groups]
dev = [
    "wii-arena-core",
    "wii-arena-cuda-driver",
    "wii-arena-dlpack",
    "wii-arena-dolphin",
    "wii-arena-dolphin-docker",
    "wii-arena-mario-kart",
]

[tool.uv.workspace]
members = [
    "packages/wii-arena-core",
    "packages/wii-arena-cuda-driver",
    "packages/wii-arena-dlpack",
    "packages/wii-arena-dolphin",
    "packages/wii-arena-dolphin-docker",
    "packages/wii-arena-mario-kart",
]

[tool.uv.sources]
wii-arena-core = { workspace = true }
wii-arena-cuda-driver = { workspace = true }
wii-arena-dlpack = { workspace = true }
wii-arena-dolphin = { workspace = true }
wii-arena-dolphin-docker = { workspace = true }
wii-arena-mario-kart = { workspace = true }


[tool.pyright]
include = [
    "packages/wii-arena-core",
    "packages/wii-arena-cuda-driver",
    "packages/wii-arena-dlpack",
    "packages/wii-arena-dolphin",
    "packages/wii-arena-dolphin-docker",
    "packages/wii-arena-mario-kart",
    "tests",
]
extraPaths = [
    "packages/wii-arena-core",
    "packages/wii-arena-cuda-driver",
    "packages/wii-arena-dlpack",
    "packages/wii-arena-dolphin",
    "packages/wii-arena-dolphin-docker",
    "packages/wii-arena-mario-kart",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
